--- a/devsearch/projects/templates/projects/home.html
+++ b/devsearch/projects/templates/projects/home.html
@@ -1,5 +1,5 @@
 {% extends 'main.html' %}
 
-{% block content  %}
+{% block content %}
 <h1>project template</h1>
-{% endblock %}
+{% endblock content %}
