CRUD operations and static files prep

--- a/devsearch/projects/templates/projects/project.html
+++ b/devsearch/projects/templates/projects/project.html
@@ -1,6 +1,13 @@
 {% extends 'main.html' %}
 
 {% block content %}
-{{project.title}}
+
+
+<h1>{{project.title}}</h1>
+
+<hr>
+{{project.tags}}
+<hr>
+<p>{{project.description}}</p>
 
 {% endblock %}
