--- a/devsearch/projects/templates/projects/project.html
+++ b/devsearch/projects/templates/projects/project.html
@@ -28,7 +28,7 @@
             </div>
             <div class="column column--2of3">
                 <img class="singleProject__preview" src="{{ project.featured_image.url }}" alt="portfolio thumbnail" />
-                <a href="profile.html" class="singleProject__developer">TODO user</a>
+                <a href="TODO link to user acc" class="singleProject__developer">By {{ project.owner }}</a>
                 <h2 class="singleProject__title">{{ project.title }}</h2>
                 <h3 class="singleProject__subtitle">About the Project</h3>
                 <div class="singleProject__info">
