--- a/devsearch/users/templates/users/login_register.html
+++ b/devsearch/users/templates/users/login_register.html
@@ -1,29 +1,81 @@
 {% extends 'main.html' %}
-
+{% load static %}
 
 {% block content %}
 
 
 {% if page == "register" %}
-<form action="" method="POST">
-    {% csrf_token %}
-    {{form.as_p}}
-    <input type="submit" value="Register" >
-    <p>Already have an accound? <a href="{% url 'login' %}">Login</a></p>
+<div class="auth">
+    <div class="card">
+        <div class="auth__header text-center">
+            <a href="/">
+                <img src="{% static 'images/icon.svg' %}" alt="icon" />
+            </a>
+            <h3>Register an accound</h3>
+            <p>Create a new developer account</p>
+        </div>
 
-</form>
-<h1>Register</h1>
+        <form action="{% url 'register' %}" class="form auth__form" method="post">
+            {% csrf_token %}
+
+            {% for field in form %}
+            <!-- Input:Text -->
+            <div class="form__field">
+                <label for="formInput#text">{{ field.label }} </label>
+                {{ field }}
+                
+            </div>
+            {% endfor %}
+            <div class="auth__actions">
+                <input class="btn btn--sub btn--lg" type="submit" value="Sign  In" />
+            </div>
+            
+        </form>
+        <div class="auth__alternative">
+            <p>Already have an Account?</p>
+            <a href="{% url 'login' %}">Log In</a>
+        </div>
+    </div>
+</div>
+
 
 {% else %}
-<form action="{% url 'login' %}" method="POST"> 
-    {% csrf_token %}
+<div class="auth">
+    <div class="card">
+        <div class="auth__header text-center">
+            <a href="/">
+                <img src="{% static 'images/icon.svg' %}" alt="icon" />
+            </a>
+            <h3>Account Login</h3>
+            <p>Hello Developer, Welcome Back!</p>
+        </div>
 
-    <input type="text" name="username" placeholder="Username">
-    <input type="password" name="password" placeholder="Password" >
-    <input type="submit" value="Login">
-    
-    <p>Dont have an accound?  <a href="{% url 'register' %}">Sign up</a></p>
-</form>
+        <form action="{% url 'login' %}" class="form auth__form" method="post">
+            {% csrf_token %}
+            <!-- Input:Email -->
+            <div class="form__field">
+                <label for="formInput#text">Username: </label>
+                <input class="input input--text" id="formInput#text" type="text" name="username"
+                    placeholder="Enter your username..." />
+            </div>
+
+            <!-- Input:Password -->
+            <div class="form__field">
+                <label for="formInput#password">Password: </label>
+                <input class="input input--password" id="formInput#passowrd" type="password" name="password"
+                    placeholder="••••••••" />
+            </div>
+            <div class="auth__actions">
+                <input class="btn btn--sub btn--lg" type="submit" value="Log In" />
+                <a href="forgetpassword.html">Forget Password?</a>
+            </div>
+        </form>
+        <div class="auth__alternative">
+            <p>Don’t have an Account?</p>
+            <a href="{% url 'register' %}">Sign Up</a>
+        </div>
+    </div>
+</div>
 
 
 {% endif %}
