--- a/devsearch/templates/navbar.html
+++ b/devsearch/templates/navbar.html
@@ -17,8 +17,9 @@
                 <li class="header__menuItem"><a href="">Inbox</a></li>
                 
                 {% if request.user.is_authenticated %}
+                <li class="header__menuItem"><a href="{% url 'account' request.user.profile.id  %}">My account</a></li>
                 <li class="header__menuItem"><a href="{% url 'logout' %}" class="btn btn--sub">Logout</a></li>
-                <li class="header__menuItem"><a href="{% url 'create_project' %}">Add project dočasne</a></li>
+                
             
                 {% else %}
                 <li class="header__menuItem"><a href="{% url 'login' %}" class="btn btn--sub">Login/Sign Up</a></li>
