--- a/devsearch/users/templates/users/account.html
+++ b/devsearch/users/templates/users/account.html
@@ -9,7 +9,7 @@
             <div class="column column--1of3">
                 <div class="card text-center">
                     <div class="card__body dev">
-                        <a class="tag tag--pill tag--main settings__btn" href="#"><i class="im im-edit"></i> Edit</a>
+                        <a class="tag tag--pill tag--main settings__btn" href="{% url 'edit_account' %}"><i class="im im-edit"></i> Edit</a>
                         <img class="avatar avatar--xl dev__avatar"
                             src="{{ account.profile_image.url }}" />
                         <h2 class="dev__name">{{ account.name }}</h2>
@@ -47,7 +47,7 @@
                         </li>
                         {% endif %}
                         </ul>
-                        <a href="#" class="btn btn--sub btn--lg">Send Message </a>
+                        
                     </div>
                 </div>
             </div>
@@ -101,7 +101,7 @@
                         <td class="settings__tableActions">
                             <a class="tag tag--pill tag--main settings__btn" href="{% url 'update_project' project.id %}"><i class="im im-edit"></i>
                                 Edit</a>
-                            <a class="tag tag--pill tag--main settings__btn" href="{% url 'delete_project' project.id %}"><i
+                            <a class="tag tag--pill tag--main settings__btn" href="{% url 'delete_project' project.id %}?next=/account/{{request.user.profile.id}}"><i
                                     class="im im-x-mark-circle-o"></i>
                                 Delete</a>
                         </td>
