--- a/devsearch/users/templates/users/login_register.html
+++ b/devsearch/users/templates/users/login_register.html
@@ -23,6 +23,11 @@
             <div class="form__field">
                 <label for="formInput#text">{{ field.label }} </label>
                 {{ field }}
+
+                {% for error in field.errors %}
+                 <small style="color: red;">{{ error }}</small>
+
+                {% endfor %}
                 
             </div>
             {% endfor %}
