--- a/devsearch/users/templates/users/login_register.html
+++ b/devsearch/users/templates/users/login_register.html
@@ -55,7 +55,7 @@
             <p>Hello Developer, Welcome Back!</p>
         </div>
 
-        <form action="{% url 'login' %}" class="form auth__form" method="post">
+        <form action="" class="form auth__form" method="post">
             {% csrf_token %}
             <!-- Input:Email -->
             <div class="form__field">
