--- a/devsearch/users/templates/users/user_profile.html
+++ b/devsearch/users/templates/users/user_profile.html
@@ -46,7 +46,9 @@
                             {% endif %}
 
                         </ul>
-                        <a href="#" class="btn btn--sub btn--lg">Send Message </a>
+                        {% if request.user.profile != profile %}
+                        <a href="{% url 'send_message' profile.id %}" class="btn btn--sub btn--lg">Send Message </a>
+                        {% endif %}
                     </div>
                 </div>
             </div>
